--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <!-- Navigation bar -->
   <nav class="navbar">
     <ul>
-      <li><a href="/Burger/TabMenu/menu.html" class="menu-link">MENU</a></li>
+      <li><a href="/TabMenu/menu.html" class="menu-link">MENU</a></li>
       <li><a href="#" class="reservation-link">RESERVATION</a></li>
-      <li><a href="/Burger/TabPhotogallery/TP.html">GALLERY</a></li>
-      <li><a href="/Burger/TabOurStory/TOS.html" class="ourStory-link">OUR STORY</a></li>
+      <li><a href="/TabPhotogallery/TP.html">GALLERY</a></li>
+      <li><a href="/TabOurStory/TOS.html" class="ourStory-link">OUR STORY</a></li>
     </ul>
   </nav>
 
